--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>{{title}}</title>
+    <style type="text/css">
+      html, body {
+        height: 100%;
+      }
+      body {
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20pt;
+      }
+    </style>
   </head>
   <body>
     {{body}}
